[gd_scene load_steps=3 format=3 uid="uid://ift2jgt0n483"]

[ext_resource type="Script" path="res://scripts/UI/esc_screen.gd" id="1_fmvsu"]
[ext_resource type="Texture2D" uid="uid://lfrtlf01b6wo" path="res://assets/sprites/dark_background.png" id="2_87lle"]

[node name="EscScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -331.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fmvsu")

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_right = 481.0
offset_bottom = 318.0

[node name="TextureRect" type="TextureRect" parent="Control"]
layout_mode = 0
offset_right = 481.0
offset_bottom = 320.0
texture = ExtResource("2_87lle")
expand_mode = 1

[node name="BackButton" type="Button" parent="."]
custom_minimum_size = Vector2(160, 80)
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Return to the game"

[node name="LoadButton" type="Button" parent="."]
custom_minimum_size = Vector2(160, 80)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -40.0
offset_right = 160.0
offset_bottom = 40.0
grow_vertical = 2
text = "Go to load game"

[node name="MenuButton" type="Button" parent="."]
custom_minimum_size = Vector2(160, 80)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 160.0
grow_vertical = 0
text = "Go to main menu"
